--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,28 @@
-@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Dancing+Script:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Dancing+Script:wght@500&family=Pacifico&family=Quintessential&display=swap");
+
 body {
-  background: rgb(235, 237, 219);
+  /* background: rgb(42, 216, 237);
   background: linear-gradient(
     0deg,
-    rgba(235, 237, 219, 1) 11%,
-    rgba(148, 233, 213, 1) 64%,
-    rgba(251, 252, 249, 1) 98%
+    rgba(42, 216, 237, 1) 0%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(42, 216, 237, 1) 100%
+  ); */
+  background: rgb(42, 216, 237);
+  background: radial-gradient(
+    circle,
+    rgba(42, 216, 237, 1) 0%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(42, 216, 237, 1) 100%
   );
+  color: black;
 }
-header,
 main,
 footer {
   margin-top: 2%;
 }
 footer {
-  color: aliceblue;
+  /* color: rgb(107, 20, 178); */
   text-align: center;
 }
 h5 {
@@ -24,79 +32,127 @@ h5 {
 h6 {
   text-align: right;
 }
-footer {
-  color: rgba(12, 116, 117, 1);
+video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
+.photo-div {
+  text-align: center;
 }
 .photo {
-  border: 10px solid rgba(12, 116, 117, 1);
-  border-radius: 50px;
+  margin: 3% 0 5% 0;
+  border: 4px solid #92c4f3;
+  border-radius: 100px;
   width: 200px;
+}
+.photo:hover {
+  border: 0 solid rgb(198, 225, 236);
+  border-radius: 40px;
+  width: 300px;
 }
 .p-profile,
 .item {
+  text-align: left;
   margin-left: 5%;
 }
-.item {
-  text-align: left;
-}
 .hello {
-  background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgba(14, 174, 87, 1) 0%,
-    rgba(12, 116, 117, 1) 90%
-  );
-  font-family: "Bangers", cursive;
+  margin: 8% 0 0 0;
+  text-shadow: 6px 4px #92c4f3;
+  font-family: "Pacifico", cursive;
   font-size: 85px;
-  /* color: cadetblue; */
-  text-align: left;
+  text-align: center;
 }
 .name {
-  background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgba(14, 174, 87, 1) 0%,
-    rgba(12, 116, 117, 1) 90%
-  );
-  font-family: "Bangers", cursive;
+  text-shadow: 6px 4px #92c4f3;
+  margin: 5% 0 5% 0;
+  font-family: "Pacifico", cursive;
   font-size: 90px;
-  /* color: cadetblue; */
-  text-align: right;
+  text-align: center;
+}
+.info {
+  font-size: 24px;
+  text-shadow: 2px 2px #92c4f3;
+  color: #242424;
+  text-align: center;
+  font-family: "Pacifico", cursive;
 }
 .block:hover {
-  background-image: linear-gradient(
-    180.5deg,
-    rgba(46, 255, 171, 1) 12.3%,
-    rgba(252, 251, 222, 0.46) 92%
+  border: 10px solid rgba(57, 161, 200, 1);
+  background: rgb(107, 20, 178);
+  background: linear-gradient(
+    180deg,
+    rgba(107, 20, 178, 1) 0%,
+    rgba(57, 161, 200, 1) 100%
   );
-  color: black;
+  color: #fff;
 }
 .block {
   margin-top: 20px;
-  border: 10px solid rgba(12, 116, 117, 1);
-  border-radius: 50px;
-  /* background-color: black; */
+  border: 8px solid #242424;
+  border-radius: 30px;
 }
 .fab {
   margin: 1% 5px 0% 5px;
-  font-size: 40px;
+  font-size: 30px;
 }
 .btn {
+  margin: 0 2% 0 2%;
   font-family: "Bangers", cursive;
-  color: aliceblue;
-  background-image: radial-gradient(
-    circle farthest-corner at 10% 20%,
-    rgba(14, 174, 87, 1) 0%,
-    rgba(12, 116, 117, 1) 90%
-  );
+  color: #242424;
+  background: rgb(148, 227, 233);
+  background: linear-gradient(0deg, rgba(148, 227, 233, 1) 34%);
 }
-.fa-github {
+a i {
+  color: #242424;
+}
+p i.fa-github {
   color: rgb(79, 26, 129);
 }
-.fa-instagram {
-  color: rgb(201, 81, 171);
+@media screen and (max-width: 480px) {
+  .name,
+  .hello {
+    font-size: 48px;
+  }
+  .info {
+    font-size: 12px;
+    text-shadow: 2px 2px #92c4f3;
+    color: #242424;
+    text-align: center;
+    font-family: "Pacifico", cursive;
+  }
+  .photo {
+    width: 100px;
+  }
+  .block {
+    margin-top: 20px;
+    border: 4px solid #242424;
+    border-radius: 30px;
+  }
+  .fab {
+    margin: 1% 5px 0% 5px;
+    font-size: 18px;
+  }
 }
-/* @media only screen and(min-width:800px) {
-  .hello,
-  .name {
+@media (min-width: 481px) and (max-width: 767px) {
+  .name,
+  .hello {
+    font-size: 56px;
+  }
+  .info {
+    font-size: 18px;
+    text-shadow: 2px 2px #92c4f3;
+    color: #242424;
+    text-align: center;
+    font-family: "Pacifico", cursive;
+  }
+  .photo {
+    width: 150px;
+  }
+  .fab {
+    margin: 1% 5px 0% 5px;
     font-size: 24px;
-  } */
+  }
 }
