--- a/public/style.css
+++ b/public/style.css
@@ -1,28 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Dancing+Script:wght@500&family=Pacifico&family=Quintessential&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Pacifico&family=Sacramento&family=Tangerine&display=swap");
 
 body {
-  /* background: rgb(42, 216, 237);
-  background: linear-gradient(
-    0deg,
-    rgba(42, 216, 237, 1) 0%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(42, 216, 237, 1) 100%
-  ); */
-  background: rgb(42, 216, 237);
+  background: rgb(252, 176, 69);
   background: radial-gradient(
     circle,
-    rgba(42, 216, 237, 1) 0%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(42, 216, 237, 1) 100%
+    rgba(252, 176, 69, 1) 13%,
+    rgba(42, 216, 237, 1) 38%,
+    rgba(192, 238, 244, 1) 83%
   );
   color: black;
+  font-size: 20px;
 }
 main,
 footer {
   margin-top: 2%;
 }
 footer {
-  /* color: rgb(107, 20, 178); */
   text-align: center;
 }
 h5 {
@@ -31,13 +24,6 @@ h5 {
 }
 h6 {
   text-align: right;
-}
-video {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
 }
 .photo-div {
   text-align: center;
@@ -58,18 +44,25 @@ video {
   text-align: left;
   margin-left: 5%;
 }
+.background-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
 .hello {
   margin: 8% 0 0 0;
-  text-shadow: 6px 4px #92c4f3;
-  font-family: "Pacifico", cursive;
-  font-size: 85px;
+  text-shadow: 2px 4px #92c4f3;
+  font-family: "Tangerine", cursive;
+  font-size: 64px;
   text-align: center;
 }
 .name {
-  text-shadow: 6px 4px #92c4f3;
-  margin: 5% 0 5% 0;
-  font-family: "Pacifico", cursive;
-  font-size: 90px;
+  text-shadow: 2px 4px #92c4f3;
+  margin: 1% 0 2% 0;
+  font-family: "Tangerine", cursive;
+  font-size: 156px;
   text-align: center;
 }
 .info {
@@ -100,7 +93,7 @@ video {
 }
 .btn {
   margin: 0 2% 0 2%;
-  font-family: "Bangers", cursive;
+  font-family: "Pacifico", cursive;
   color: #242424;
   background: rgb(148, 227, 233);
   background: linear-gradient(0deg, rgba(148, 227, 233, 1) 34%);
@@ -112,9 +105,14 @@ p i.fa-github {
   color: rgb(79, 26, 129);
 }
 @media screen and (max-width: 480px) {
-  .name,
+  body {
+    font-size: 16px;
+  }
+  .name {
+    font-size: 84px;
+  }
   .hello {
-    font-size: 48px;
+    font-size: 30px;
   }
   .info {
     font-size: 12px;
@@ -137,9 +135,14 @@ p i.fa-github {
   }
 }
 @media (min-width: 481px) and (max-width: 767px) {
-  .name,
+  body {
+    font-size: 16px;
+  }
+  .name {
+    font-size: 110px;
+  }
   .hello {
-    font-size: 56px;
+    font-size: 42px;
   }
   .info {
     font-size: 18px;
